src/objects/c2g__StatisticalBasis__c.object
<CustomObject>
    <customHelpPage>c2g__helpstatisticalbasis</customHelpPage>
    <description>Stores the header of values of statistical data.</description>
    <fields>
        <fullName>c2g__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Statistical Bases</relationshipLabel>
        <relationshipName>StatisticalBases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Statistical Bases</relationshipLabel>
        <relationshipName>StatisticalBases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TotalValue__c</fullName>
        <label>Total Value</label>
        <summarizedField>c2g__StatisticalBasisLineItem__c.c2g__Value__c</summarizedField>
        <summaryForeignKey>c2g__StatisticalBasisLineItem__c.c2g__StatisticalBasis__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfMeasure__c</fullName>
        <label>Unit of Measure</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>People</fullName>
                </value>
                <value>
                    <fullName>Square Feet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Statistical Basis</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Description__c</columns>
        <columns>c2g__Date__c</columns>
        <columns>c2g__Company__c</columns>
        <columns>c2g__UnitOfMeasure__c</columns>
        <columns>c2g__TotalValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Statistical Basis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Statistical Bases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>